JIRA:EMCPDF-4246 Fix hierachical menu layout issue

--- a/omc-ui-framework/omc-ui-framework-web/public_html/scss/widgets/uifwk-common-alta.scss
+++ b/omc-ui-framework/omc-ui-framework-web/public_html/scss/widgets/uifwk-common-alta.scss
@@ -493,3 +493,8 @@ a:hover {
 #offcanvasInnerContainer .oj-web-applayout-scrollable {
     overflow-y:auto;
 }
+
+html:not([dir="ltr"]) .oj-navigationlist-hierarchical-menu .oj-menu-item-icon {
+    -webkit-transform: none;
+    transform: none;
+}
